--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,3 +1,48 @@
-page-login {
+.background{
+	background-color: color($colors, background, base);
+	color: color($colors, secondary, base);
+}
 
+.btn{
+	width: 100%;
+	margin-top: 22%;
+
+	font-size: 1.3em;
+	font-family: Avenir;
+	opacity: 0.7;
+
+}
+
+.box{
+	margin: 5% auto;
+	display: block;
+	text-align: center;
+}
+
+.login{
+	font-size: 1em;
+	font-family: Avenir;
+	opacity: 0.6;
+}
+
+.login-input{
+	margin-top: 80%;
+}
+
+.input{
+	color: color($colors, secondary, base);
+}
+
+.no-scroll .scroll-content{
+     overflow: hidden;
+}
+
+#span{
+	color: color($colors, secondary, base);
+}
+
+a{	
+	margin: 10% auto;
+	font-size: 0.9em;
+	color: color($colors, light, base);
 }
