--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,13 +24,14 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
-  secondary:  #32db64,
+  primary:    #FF2E63,
+  secondary:  #252A34,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  background: #EAEAEA,
+  
 );
-
 
 // App iOS Variables
 // --------------------------------------------------
