Half of design done

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,3 +20,9 @@
 	background-repeat: no-repeat;
     background-size: cover;
 }
+
+.background1 {
+	background-image: url('../img/bckg1.jpg');
+	background-repeat: no-repeat;
+    background-size: cover;
+}
