--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -30,6 +30,7 @@ $colors: (
   light:      #f4f4f4,
   dark:       #222,
   background: #EAEAEA,
+  opacity:    rgba(234, 234, 234, 0.78),
   
 );
 
