--- a/src/pages/page1/page1.scss
+++ b/src/pages/page1/page1.scss
@@ -1,3 +1,23 @@
-page-page1 {
 
+
+p.price {
+	width: 100%;
+	float: left;
+	text-align: right;
+	font-size: 16px;
+	
+}
+
+.price:after{
+	content: " €";
+
+}
+
+.items{
+	background-color: color($colors, opacity, base);
+
+}
+
+p{
+	color: color($colors, dark, base) !important;
 }
